@@ -1,3 +1,13 @@
+2005-12-07  Laurent Sansonetti  <lrz@gnome.org>
+
+	* lib/alexandria/ui/main_app.rb:
+
+	- Work around the beginning of a drag when running a dialog within the
+	  GtkIconView's item-activated or GtkTreeView's row-activated signal
+	  handlers ;
+	- When right clicking, if the mouse is not on an item, deselect everything
+	  before showing the popup menu.
+
 2005-12-02  Laurent Sansonetti  <lrz@gnome.org>
 
 	* lib/alexandria/ui.rb,
